fixed some styling with current playlists buttons. song dont paginate if less thatn 10 items in li. need to figure out why. playlists are also rendering too much space and causing visual shift

--- a/app/components/SongSearchResults/songSearchResults.module.css
+++ b/app/components/SongSearchResults/songSearchResults.module.css
@@ -1,3 +1,21 @@
+.loadingPlaceholder {
+
+    /* Shimmer animation */
+    background: linear-gradient(90deg, #f5e1e1 25%, #fbe9e7 50%, #f5e1e1 75%);
+    background-size: 200% 100%;
+    animation: shimmer 1.5s infinite linear;
+}
+
+@keyframes shimmer {
+    0% {
+        background-position: -200% 0;
+    }
+
+    100% {
+        background-position: 200% 0;
+    }
+}
+
 .paginationWrapper {
     display: flex;
     flex-direction: row;
@@ -15,7 +33,7 @@
     width: 80dvw;
     max-height: 50vh;
     position: relative;
-    margin:5em 0 0 0 ;
+    margin: 5em 0 0 0;
     /* overflow-y: auto; */
 
     & ul {
@@ -89,7 +107,7 @@
 }
 
 .songResultsContents {
-    width:100%;
+    width: 100%;
 }
 
 .songResultsTitle {
